[package]
edition = "2018"
name = "lsp-text"
version = "0.0.0"
authors = ["hvithrafn <hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/hvithrafn/lsp-text"
keywords = []
description = """
Common functionality for text handling for LSP servers.
"""

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0"
bytes = "1.0"
lsp = { version = "0.86", package = "lsp-types" }
ropey = "1.2"

[dependencies.tree-sitter]
package = "tree-sitter-facade"
version = "0.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[workspace]
members = [".", "xtask"]
default-members = ["."]
