[package]
edition = "2018"
name = "lsp-text"
version = "0.1.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/silvanshade/lsp-text"
keywords = []
description = """
Common functionality for text handling for LSP servers.
"""

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0"
bytes = "1.0"
lsp = { version = "0.91", package = "lsp-types" }
ropey = "1.2"

[dependencies.tree-sitter]
package = "tree-sitter-facade"
version = "0.2"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[workspace]
members = [".", "xtask"]
default-members = ["."]
